unpackaged/objects/MetaDataSearch__Config_Manager__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>MetaDataSearch__Is_Debug_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Debug On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Query_Limit_For_Body_Elements__c</fullName>
        <label>Query Limit For Body Elements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Rows_To_Display__c</fullName>
        <label>Rows To Display</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__SearchFields__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__SearchManagedClasses__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Managed Classes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__SearchManagedComponents__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Managed Components</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__SearchManagedFields__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Managed Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__SearchManagedObjects__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Managed Objects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_All__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Apex_Classes__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Apex Classes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Apex_Triggers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Apex Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Approval_Process__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Apps__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Apps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Assignment_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Assignment Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Business_Process__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Business Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Button_Links__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Button &amp; Links</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Components__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Components</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Custom_Setting__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Custom Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Custom_Tabs__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Custom Tabs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Dashboards__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Dashboards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Disabled_Message__c</fullName>
        <defaultValue>&quot;Search for this component has been disabled. Hence search wasn&apos;t performed for this component.&quot;</defaultValue>
        <label>Search Disabled Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Email_Templates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Email Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Field_Sets__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Field Sets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Lightning_Components__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Lightning Components</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Managed_Pages__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Managed Pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Managed_Triggers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Managed Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Objects__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Objects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Pages__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Permission_Sets__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Permission Sets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Profiles__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Profiles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Public_Groups__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Public Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Queues__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Queues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Recent_Items__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Recent Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Record_Types__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Record Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Reports__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Results_Limit__c</fullName>
        <label>Search Results Limit</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Roles__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Scheduled_Jobs__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Scheduled Jobs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Setup_Audit_Trails__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Setup Audit Trails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Sites__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Sites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Static_Resources__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Static Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Validation_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Workflow_Email_Alert__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Workflow Email Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Workflow_Field_Update__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Workflow Field Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Workflow_Outbound_Messages__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Workflow Outbound Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Workflow_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Workflow Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaDataSearch__Search_Workflow_Task__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Workflow Task</label>
        <type>Checkbox</type>
    </fields>
    <label>Config Manager</label>
</CustomObject>